[package]
name = "halo2wrong"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { package = "halo2_proofs", git = "https://github.com/scroll-tech/halo2", branch = "sync-halo2-ecc-1013" }
group = "0.12"

[dev-dependencies]
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
